# ClimaPlan

./: .gitignore  README.md  baseline.py  config.py  eval.py  eval_code.py  eval_code_prompt.py  eval_run_code.py  filter_open_meteo.py  index.py  main.py  models.py  prompts.py  pyproject.toml  run_open_meteo_silent.sh  stdio_server.py  test.py  tools.py  utility.py
data/: historical_weather_compare_9394.csv
function/: location.py
